z-index bug #44

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1067,6 +1067,9 @@ select {
 .z-10 {
   z-index: 10;
 }
+.z-20 {
+  z-index: 20;
+}
 .col-span-6 {
   grid-column: span 6 / span 6;
 }
